practica 8/swicthParser.py
# Generated from swicth.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class swicthParser ( Parser ):

    grammarFileName = "swicth.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'else'", "'switch'", "'case'", 
                     "'default'", "'('", "')'", "'{'", "'}'", "':'", "'='", 
                     "'+'", "'-'", "'*'", "'/'", "'>'", "'<'", "'=='", "'!='", 
                     "';'" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "SWITCH", "CASE", "DEFAULT", 
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "DOBLEP", 
                      "ASSIGN", "PLUS", "MINUS", "MUL", "DIV", "GT", "LT", 
                      "EQ", "NEQ", "SEMI", "ID", "INT", "WS" ]

    RULE_programa = 0
    RULE_sentencia = 1
    RULE_switchOrden = 2
    RULE_caseOrden = 3
    RULE_defaultOrden = 4
    RULE_asignacion = 5
    RULE_expresion = 6

    ruleNames =  [ "programa", "sentencia", "switchOrden", "caseOrden", 
                   "defaultOrden", "asignacion", "expresion" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    SWITCH=3
    CASE=4
    DEFAULT=5
    LPAREN=6
    RPAREN=7
    LBRACE=8
    RBRACE=9
    DOBLEP=10
    ASSIGN=11
    PLUS=12
    MINUS=13
    MUL=14
    DIV=15
    GT=16
    LT=17
    EQ=18
    NEQ=19
    SEMI=20
    ID=21
    INT=22
    WS=23

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(swicthParser.EOF, 0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(swicthParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(swicthParser.SentenciaContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(swicthParser.SEMI)
            else:
                return self.getToken(swicthParser.SEMI, i)

        def getRuleIndex(self):
            return swicthParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = swicthParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 18 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 14
                self.sentencia()
                self.state = 16
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==20:
                    self.state = 15
                    self.match(swicthParser.SEMI)


                self.state = 20 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==3 or _la==21):
                    break

            self.state = 22
            self.match(swicthParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def switchOrden(self):
            return self.getTypedRuleContext(swicthParser.SwitchOrdenContext,0)


        def asignacion(self):
            return self.getTypedRuleContext(swicthParser.AsignacionContext,0)


        def getRuleIndex(self):
            return swicthParser.RULE_sentencia

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentencia" ):
                listener.enterSentencia(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentencia" ):
                listener.exitSentencia(self)




    def sentencia(self):

        localctx = swicthParser.SentenciaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sentencia)
        try:
            self.state = 26
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 24
                self.switchOrden()
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 2)
                self.state = 25
                self.asignacion()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SwitchOrdenContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SWITCH(self):
            return self.getToken(swicthParser.SWITCH, 0)

        def LPAREN(self):
            return self.getToken(swicthParser.LPAREN, 0)

        def expresion(self):
            return self.getTypedRuleContext(swicthParser.ExpresionContext,0)


        def RPAREN(self):
            return self.getToken(swicthParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(swicthParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(swicthParser.RBRACE, 0)

        def caseOrden(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(swicthParser.CaseOrdenContext)
            else:
                return self.getTypedRuleContext(swicthParser.CaseOrdenContext,i)


        def defaultOrden(self):
            return self.getTypedRuleContext(swicthParser.DefaultOrdenContext,0)


        def getRuleIndex(self):
            return swicthParser.RULE_switchOrden

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSwitchOrden" ):
                listener.enterSwitchOrden(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSwitchOrden" ):
                listener.exitSwitchOrden(self)




    def switchOrden(self):

        localctx = swicthParser.SwitchOrdenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_switchOrden)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.match(swicthParser.SWITCH)
            self.state = 29
            self.match(swicthParser.LPAREN)
            self.state = 30
            self.expresion(0)
            self.state = 31
            self.match(swicthParser.RPAREN)
            self.state = 32
            self.match(swicthParser.LBRACE)
            self.state = 36
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 33
                self.caseOrden()
                self.state = 38
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 39
                self.defaultOrden()


            self.state = 42
            self.match(swicthParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CaseOrdenContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CASE(self):
            return self.getToken(swicthParser.CASE, 0)

        def INT(self):
            return self.getToken(swicthParser.INT, 0)

        def DOBLEP(self):
            return self.getToken(swicthParser.DOBLEP, 0)

        def asignacion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(swicthParser.AsignacionContext)
            else:
                return self.getTypedRuleContext(swicthParser.AsignacionContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(swicthParser.SEMI)
            else:
                return self.getToken(swicthParser.SEMI, i)

        def getRuleIndex(self):
            return swicthParser.RULE_caseOrden

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCaseOrden" ):
                listener.enterCaseOrden(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCaseOrden" ):
                listener.exitCaseOrden(self)




    def caseOrden(self):

        localctx = swicthParser.CaseOrdenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_caseOrden)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(swicthParser.CASE)
            self.state = 45
            self.match(swicthParser.INT)
            self.state = 46
            self.match(swicthParser.DOBLEP)
            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21:
                self.state = 47
                self.asignacion()
                self.state = 48
                self.match(swicthParser.SEMI)
                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefaultOrdenContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEFAULT(self):
            return self.getToken(swicthParser.DEFAULT, 0)

        def DOBLEP(self):
            return self.getToken(swicthParser.DOBLEP, 0)

        def asignacion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(swicthParser.AsignacionContext)
            else:
                return self.getTypedRuleContext(swicthParser.AsignacionContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(swicthParser.SEMI)
            else:
                return self.getToken(swicthParser.SEMI, i)

        def getRuleIndex(self):
            return swicthParser.RULE_defaultOrden

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefaultOrden" ):
                listener.enterDefaultOrden(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefaultOrden" ):
                listener.exitDefaultOrden(self)




    def defaultOrden(self):

        localctx = swicthParser.DefaultOrdenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_defaultOrden)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(swicthParser.DEFAULT)
            self.state = 56
            self.match(swicthParser.DOBLEP)
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21:
                self.state = 57
                self.asignacion()
                self.state = 58
                self.match(swicthParser.SEMI)
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return swicthParser.RULE_asignacion

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AssignContext(AsignacionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a swicthParser.AsignacionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(swicthParser.ID, 0)
        def ASSIGN(self):
            return self.getToken(swicthParser.ASSIGN, 0)
        def expresion(self):
            return self.getTypedRuleContext(swicthParser.ExpresionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)



    def asignacion(self):

        localctx = swicthParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_asignacion)
        try:
            localctx = swicthParser.AssignContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(swicthParser.ID)
            self.state = 66
            self.match(swicthParser.ASSIGN)
            self.state = 67
            self.expresion(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpresionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return swicthParser.RULE_expresion

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class VariableContext(ExpresionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a swicthParser.ExpresionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(swicthParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)


    class MulDivContext(ExpresionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a swicthParser.ExpresionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(swicthParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(swicthParser.ExpresionContext,i)

        def MUL(self):
            return self.getToken(swicthParser.MUL, 0)
        def DIV(self):
            return self.getToken(swicthParser.DIV, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMulDiv" ):
                listener.enterMulDiv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMulDiv" ):
                listener.exitMulDiv(self)


    class AddSubContext(ExpresionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a swicthParser.ExpresionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(swicthParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(swicthParser.ExpresionContext,i)

        def PLUS(self):
            return self.getToken(swicthParser.PLUS, 0)
        def MINUS(self):
            return self.getToken(swicthParser.MINUS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddSub" ):
                listener.enterAddSub(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddSub" ):
                listener.exitAddSub(self)


    class ParensContext(ExpresionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a swicthParser.ExpresionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(swicthParser.LPAREN, 0)
        def expresion(self):
            return self.getTypedRuleContext(swicthParser.ExpresionContext,0)

        def RPAREN(self):
            return self.getToken(swicthParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParens" ):
                listener.enterParens(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParens" ):
                listener.exitParens(self)


    class IntContext(ExpresionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a swicthParser.ExpresionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(swicthParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInt" ):
                listener.enterInt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInt" ):
                listener.exitInt(self)



    def expresion(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = swicthParser.ExpresionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_expresion, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [22]:
                localctx = swicthParser.IntContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 70
                self.match(swicthParser.INT)
                pass
            elif token in [21]:
                localctx = swicthParser.VariableContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 71
                self.match(swicthParser.ID)
                pass
            elif token in [6]:
                localctx = swicthParser.ParensContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 72
                self.match(swicthParser.LPAREN)
                self.state = 73
                self.expresion(0)
                self.state = 74
                self.match(swicthParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 86
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 84
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                    if la_ == 1:
                        localctx = swicthParser.MulDivContext(self, swicthParser.ExpresionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expresion)
                        self.state = 78
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 79
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==14 or _la==15):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 80
                        self.expresion(6)
                        pass

                    elif la_ == 2:
                        localctx = swicthParser.AddSubContext(self, swicthParser.ExpresionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expresion)
                        self.state = 81
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 82
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==12 or _la==13):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 83
                        self.expresion(5)
                        pass

             
                self.state = 88
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[6] = self.expresion_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expresion_sempred(self, localctx:ExpresionContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 5)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 4)
         




